--- a/cfcproduct.html
+++ b/cfcproduct.html
@@ -115,7 +115,14 @@
       <div class="productproduct">
         <span class="parag">Our composite workshop is an one stop solution for all your carbon fibre needs. We manufacture custom parts and provide consultancy to incorporate carbon fibre as the replacement for other conventional materials, as it is a popular choice in high performance.</span>
       </div>
-      <span>pictures</span>
+      <div class="cfc-images">
+        <div class="img-left">
+          <img src="images/cfc-1.jpg">
+        </div>
+        <div class="img-right">
+          <img src="images/cfc-2.jpg">
+        </div>
+      </div>
       <div class="productproduct">
         <span class="parag">Boasting superb stiffness and tensile strength despite its minimal weight, carbon fibre is also renowned for its minimal thermal expansion and chemical resistance. Carbon fibre continues to be a go to choice in the aerospace and aviation industries. Modern commercial freight and passenger airlines feature carbon fibre composites, allowing them to be lighter and more fuel efficient.</span>
       </div>
