--- a/cflproduct.html
+++ b/cflproduct.html
@@ -121,21 +121,31 @@
       <div class="productproduct">
         <span class="parag">The sheet is also available in different sizes upto the maximum of 1 square metre. Contact us for more specific details.</span>
       </div>
-      <span>pictures</span>
+      <div class="cfl-images">
+        <div class="img-left">
+          <img src="images/cfl-1.jpg">
+        </div>
+        <div class="img-middle">
+          <img src="images/cfl-2.jpg">
+        </div>
+        <div class="img-right">
+          <img src="images/cfl-3.jpg">
+        </div>
+      </div>
       <div class="productproduct">
         <span class="title">Typical Uses</span>
-        <span class="parag points"><i class="fas fa-circle"></i>Motorsport </span>
-        <span class="parag points"><i class="fas fa-circle"></i>Engineering / automation</span>
-        <span class="parag points"><i class="fas fa-circle"></i>Light aircrafts / Drones</span>
-        <span class="parag points"><i class="fas fa-circle"></i>Marine sports</span>
-        <span class="parag points"><i class="fas fa-circle"></i>Further processing into sandwich panels</span>
+        <span class="parag points"><i class="fas fa-chevron-right"></i>Motorsport </span>
+        <span class="parag points"><i class="fas fa-chevron-right"></i>Engineering / automation</span>
+        <span class="parag points"><i class="fas fa-chevron-right"></i>Light aircrafts / Drones</span>
+        <span class="parag points"><i class="fas fa-chevron-right"></i>Marine sports</span>
+        <span class="parag points"><i class="fas fa-chevron-right"></i>Further processing into sandwich panels</span>
       </div>
       <div class="productproduct">
         <span class="title">Advantages</span>
-        <span class="parag points"><i class="fas fa-circle"></i>100% high strength carbon fibre reinforcement throughout</span>
-        <span class="parag points"><i class="fas fa-circle"></i>Pin-hole free high-gloss cosmetic surface</span>
-        <span class="parag points"><i class="fas fa-circle"></i>Flat, textured bonding surface on the reverse</span>
-        <span class="parag points"><i class="fas fa-circle"></i>Wide range of thicknesses and sheet sizes available</span>
+        <span class="parag points"><i class="fas fa-chevron-right"></i>100% high strength carbon fibre reinforcement throughout</span>
+        <span class="parag points"><i class="fas fa-chevron-right"></i>Pin-hole free high-gloss cosmetic surface</span>
+        <span class="parag points"><i class="fas fa-chevron-right"></i>Flat, textured bonding surface on the reverse</span>
+        <span class="parag points"><i class="fas fa-chevron-right"></i>Wide range of thicknesses and sheet sizes available</span>
       </div>
     </div>
   </div>
