--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </header><!-- #header -->
   <div class="slideshow-container">
     <div class="mySlides fade">
-      <img src="images/drone1.jpg" style="width:100%">
+      <img src="images/aerospace1.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
@@ -95,7 +95,7 @@
     </div>
 
     <div class="mySlides fade">
-      <img src="images/aerospace1.jpg" style="width:100%">
+      <img src="images/drone1.jpg" style="width:100%">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -150,28 +150,28 @@
   </div>
   <div id="marketcont" class="marketcont">
     <div class="card">
-      <img src="images/s3.png" class="image1">
+      <img src="images/market-1.jpg" class="image1">
       <div class="centeredtitle">
         <span>Aerospace and defense</span>
         <p>We manufacture high performance composite designed to meet the stringuent performance and safety requirements of aerospace markets.</p>
       </div>
     </div>
     <div class="card">
-      <img src="images/s3.png" class="image1">
+      <img src="images/market-2.jpg" class="image1">
       <div class="centeredtitle">
         <span>Industrial composites</span>
         <p>Industrial composites are used in wind marine construction and transportation and other equipments marine corrosion resistance is required.</p>
       </div>
     </div>
     <div class="card">
-      <img src="images/s3.png" class="image1">
+      <img src="images/market-3.jpg" class="image1">
       <div class="centeredtitle">
         <span>Sports equipment</span>
         <p>Composite materials are light weight, provide high strength freedom of design easy processing and forming characteristics and they have obtained the widespread application in the manufacture of sports equipments.</p>
       </div>
     </div>
     <div class="card">
-      <img src="images/s3.png" class="image1">
+      <img src="images/market-4.jpg" class="image1">
       <div class="centeredtitle">
         <span>Automotive components</span>
         <p>Industrial composite materials helps in reducing weight and co2 emissions of existing internal combustion based motor vehicles and optimizing the efficiency of the next generation electric vehicles.</p>
