--- a/processcapabilities.html
+++ b/processcapabilities.html
@@ -95,37 +95,66 @@
     <span class="linestart"></span>
     <span class="lineend"></span>
     <span class="subtitle">Advanced Composite</span>
-    <span class="subsubtitle">Product Development</span>
     <div class="flowchart">
-      <div class="flow1">
-        <span>Design and Development</span>
+      <div class="left-image">
+        <img src="images/marke.jpg" class="image1">
+        <div class="centeredtitle">
+          <span class="sub-title">Design and development</span>
+        </div>
       </div>
-      <div class="flow2">
-        <div class="linestartflow"><i class="fas fa-chevron-down"></i></div>
-        <span>Design feasitility</span>
-      </div>
-      <div class="flow3">
-        <div class="linestartflow"><i class="fas fa-chevron-down"></i></div>
-        <span>Tooling and machining</span>
-      </div>
-      <div class="flow4">
-        <div class="linestartflow"><i class="fas fa-chevron-down"></i></div>
-        <span>Prototype development</span>
-      </div>
-      <div class="flow5">
-        <div class="linestartflow"><i class="fas fa-chevron-down"></i></div>
-        <span>Testing</span>
-      </div>
-      <div class="flow6">
-        <div class="linestartflow"><i class="fas fa-chevron-down"></i></div>
-        <span>Production optimization</span>
-      </div>
-      <div class="flow7">
-        <div class="linestartflow"><i class="fas fa-chevron-down"></i></div>
-        <span>Product manufacturing</span>
+      <div class="right-text">
+        <span>The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
       </div>
     </div>
-    <div class="processflow">
+
+    <div class="flowchart">
+      <div class="left-image">
+        <img src="images/marke.jpg" class="image1">
+        <div class="centeredtitle">
+          <span class="sub-title">Design and development</span>
+        </div>
+      </div>
+      <div class="right-text">
+        <span>The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
+      </div>
+    </div>
+
+    <div class="flowchart">
+      <div class="left-image">
+        <img src="images/marke.jpg" class="image1">
+        <div class="centeredtitle">
+          <span class="sub-title">Design and development</span>
+        </div>
+      </div>
+      <div class="right-text">
+        <span>The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
+      </div>
+    </div>
+
+    <div class="flowchart">
+      <div class="left-image">
+        <img src="images/marke.jpg" class="image1">
+        <div class="centeredtitle">
+          <span class="sub-title">Design and development</span>
+        </div>
+      </div>
+      <div class="right-text">
+        <span>The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
+      </div>
+    </div>
+
+    <div class="flowchart">
+      <div class="left-image">
+        <img src="images/marke.jpg">
+        <div class="centeredtitle">
+          <span class="sub-title">Design and development</span>
+        </div>
+      </div>
+      <div class="right-text">
+        <span>The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
+      </div>
+    </div>
+    <!-- <div class="processflow">
       <span class="subsubtitle">Design and development</span>
       <span class="parag">Aviscraft with its expertin in design and development has provided long term solutions with optimized design and make them familiar with key benefits of using composite as a replacements of other materials.</span>
     </div>
@@ -138,18 +167,20 @@
       <span class="parag">With strong technical background our engineers offer advice on the tools and machining processes required to manufacture the prototype with exact dimensions and tolerances.</span>
     </div>
     <div class="processflow">
-      <span class="subsubtitle">Prototype development and manufacturing</span>
-      <span class="parag">Our composite workshop in equipped to provide our stop solution from parts manufacturing to assembly of compsite structures under our roof. High proficient and experienced human resource in composite manufacturing adds and the core strength of our organization.</span><br>
-      <span class="parag heading">Our manufacturing process include:</span>
-      <span class="parag points"><i class="fas fa-circle"></i>Hand laying</span>
-      <span class="parag points"><i class="fas fa-circle"></i>Mold making(small batch production)</span>
-      <span class="parag points"><i class="fas fa-circle"></i>Vaccum assisted resine imfusion moulding</span>
-      <span class="parag points"><i class="fas fa-circle"></i>Resin transfer moulding</span>
-      <span class="parag points"><i class="fas fa-circle"></i>Proprag and autoclare</span>
+      <span class="subsubtitle">Prototype development</span>
+      <span class="parag">Our composite workshop in equipped to provide our stop solution from parts manufacturing to assembly of compsite structures under our roof. High proficient and experienced human resource in composite manufacturing adds and the core strength of our organization.</span>
     </div>
     <div class="processflow">
       <span class="subsubtitle">Testing</span>
       <span class="parag">The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
+    </div> -->
+    <div class="headingflow">
+      <span class="subtitle">Our manufacturing capabilities</span>
+      <span class="parag points"><i class="fas fa-chevron-right"></i>Hand laying</span>
+      <span class="parag points"><i class="fas fa-chevron-right"></i>Mold making(small batch production)</span>
+      <span class="parag points"><i class="fas fa-chevron-right"></i>Vaccum assisted resine imfusion moulding</span>
+      <span class="parag points"><i class="fas fa-chevron-right"></i>Resin transfer moulding</span>
+      <span class="parag points"><i class="fas fa-chevron-right"></i>Proprag and autoclare</span>
     </div>
     <div class="headingflow">
       <span class="subtitle">Weaving</span>
