--- a/syproduct.html
+++ b/syproduct.html
@@ -115,7 +115,7 @@
       <div class="productproduct">
         <span class="parag">Aviscraft Advanced Materials Manufactures Technical yarns & Sewing threads for various applications using high performance ﬁbres like Meta Aramid (Nomex®), Para Aramid (Kevlar®), Mod Acrylic, Nylon 6 & 66, Polyester Super High Tenacity, FR Polyester, High Quality Cotton, Core Spun Lycra, PPS, PTFE, Carbon, Anti-static, PBI etc.</span>
       </div>
-      <div style="overflow-x:auto;">
+      <div class="table-main">
         <table>
           <tr>
             <th>FIBRE TYPE</th>
