--- a/rfproduct.html
+++ b/rfproduct.html
@@ -119,7 +119,7 @@
       <div class="productproduct">
         <span class="parag">Our range of woven carbon fibre fabrics includes carbon cloth in a number of weave styles, tow sizes, weights and widths, in all cases made from premium high strength fibre. Twill and Plain type weave are regular Carbon Bidirectional fabric weave types. Contact our technical team if you need help or advice choosing the right woven reinforcement for your application.</span>
       </div>
-      <div style="overflow-x:auto;">
+      <div class="table-main">
         <table>
           <tr>
             <th>FIBRE TYPE</th>
@@ -179,7 +179,7 @@
       <div class="productproduct">
         <span class="parag">Chopped strand mat is the classic reinforcement for traditional 'hand layup' fibreglassing jobs, especially together with polyester laminating resin.</span>
       </div>
-      <div style="overflow-x:auto;">
+      <div class="table-main">
         <table>
           <tr>
             <th>FIBRE TYPE</th>
@@ -232,7 +232,7 @@
       <div class="productproduct">
         <span class="parag">Kevlar cloth is frequently used in laminates for motorsport, canoes, kayaks, ballistics and much more. This dry Kevlar® fabric is suitable for use with most composite lamination methods including hand-layup, vacuum bagging and resin infusion. To ensure a good bond between the matrix and the aramid fibre, epoxy resin is recommended for use with aramid reinforcements.</span>
       </div>
-      <div style="overflow-x:auto;">
+      <div class="table-main">
         <table>
           <tr>
             <th>FIBRE TYPE</th>
