--- a/contactus.html
+++ b/contactus.html
@@ -60,7 +60,7 @@
             </div>
           </div> 
         </li>
-        <li><a href="contactus.html" title="Contact Us" data-ripple="" class="menu-active"> Contact Us </a></li>
+        <li><a href="contactus.html" title="Contact Us" data-ripple="" class="menu-active">Contact Us </a></li>
       </ul>
         <li class="men">
           <div id="mySidepanel" class="sidepanel">
@@ -68,7 +68,7 @@
             <a href="index.html"title="Home" data-ripple=""> Home</a>
             <a href="aboutus.html" title="About Us" data-ripple=""> About Us</a>
             <a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities</a>
-            <a href="products.html" title="Products" data-ripple=""> Products</a>
+            <a href="products.html" title="Products" data-ripple="">Products</a>
             <div class="dropdown-content">
               <span class="maintitle">Advanced Composites</span>
               <a href="cfcproduct.html">Carbon fiber composites</a>
@@ -79,6 +79,8 @@
               <a href="clfproduct.html">Coated and laminated fabrics</a>
               <a href="syproduct.html">Spun yarn</a>
             </div>
+            <a href="contactus.html" title="Contact Us" data-ripple="" class="menu-active"> Contact Us</a>
+          </div>
           <button class="openbtn" onclick="openNav()"><i class="fas fa-bars"></i></button> 
         </li>
     </div>
