--- a/processcapabilities.html
+++ b/processcapabilities.html
@@ -97,90 +97,103 @@
     <span class="subtitle">Advanced Composite</span>
     <div class="flowchart">
       <div class="left-image">
-        <img src="images/marke.jpg" class="image1">
+        <img src="images/pc-dad.jpg" class="image1">
         <div class="centeredtitle">
           <span class="sub-title">Design and development</span>
         </div>
       </div>
       <div class="right-text">
-        <span>The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
+        <span>Aviscraft with its expertin in design and development has provided long term solutions with optimized design and make them familiar with key benefits of using composite as a replacements of other materials.</span>
       </div>
     </div>
 
     <div class="flowchart">
       <div class="left-image">
-        <img src="images/marke.jpg" class="image1">
+        <img src="images/pc-df.jpg" class="image1">
         <div class="centeredtitle">
-          <span class="sub-title">Design and development</span>
+          <span class="sub-title">Design feasitivity</span>
         </div>
       </div>
       <div class="right-text">
-        <span>The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
+        <span>Our simulated results are thoroughly studied and accessed with experimental and theoretical date using advanced softwares to study the feasitility of the design developed.</span>
       </div>
     </div>
 
     <div class="flowchart">
       <div class="left-image">
-        <img src="images/marke.jpg" class="image1">
+        <img src="images/pc-tam.jpg" class="image1">
         <div class="centeredtitle">
-          <span class="sub-title">Design and development</span>
+          <span class="sub-title">Tooling and machining</span>
         </div>
       </div>
       <div class="right-text">
-        <span>The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
+        <span>With strong technical background our engineers offer advice on the tools and machining processes required to manufacture the prototype with exact dimensions and tolerances.</span>
       </div>
     </div>
 
     <div class="flowchart">
       <div class="left-image">
-        <img src="images/marke.jpg" class="image1">
+        <img src="images/pc-pd.jpg" class="image1">
         <div class="centeredtitle">
-          <span class="sub-title">Design and development</span>
+          <span class="sub-title">Prototype development</span>
         </div>
       </div>
       <div class="right-text">
-        <span>The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
+        <span>Our composite workshop in equipped to provide our stop solution from parts manufacturing to assembly of compsite structures under our roof. High proficient and experienced human resource in composite manufacturing adds and the core strength of our organization.</span>
       </div>
     </div>
 
     <div class="flowchart">
       <div class="left-image">
-        <img src="images/marke.jpg">
+        <img src="images/pc-t.jpg">
         <div class="centeredtitle">
-          <span class="sub-title">Design and development</span>
+          <span class="sub-title">Testing</span>
         </div>
       </div>
       <div class="right-text">
         <span>The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
       </div>
     </div>
-    <!-- <div class="processflow">
-      <span class="subsubtitle">Design and development</span>
-      <span class="parag">Aviscraft with its expertin in design and development has provided long term solutions with optimized design and make them familiar with key benefits of using composite as a replacements of other materials.</span>
-    </div>
-    <div class="processflow">
-      <span class="subsubtitle">Design feasitivity</span>
-      <span class="parag">Our simulated results are thoroughly studied and accessed with experimental and theoretical date using advanced softwares to study the feasitility of the design developed.</span>
-    </div>
-    <div class="processflow">
-      <span class="subsubtitle">Tooling and machining</span>
-      <span class="parag">With strong technical background our engineers offer advice on the tools and machining processes required to manufacture the prototype with exact dimensions and tolerances.</span>
-    </div>
-    <div class="processflow">
-      <span class="subsubtitle">Prototype development</span>
-      <span class="parag">Our composite workshop in equipped to provide our stop solution from parts manufacturing to assembly of compsite structures under our roof. High proficient and experienced human resource in composite manufacturing adds and the core strength of our organization.</span>
-    </div>
-    <div class="processflow">
-      <span class="subsubtitle">Testing</span>
-      <span class="parag">The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
-    </div> -->
     <div class="headingflow">
-      <span class="subtitle">Our manufacturing capabilities</span>
-      <span class="parag points"><i class="fas fa-chevron-right"></i>Hand laying</span>
-      <span class="parag points"><i class="fas fa-chevron-right"></i>Mold making(small batch production)</span>
-      <span class="parag points"><i class="fas fa-chevron-right"></i>Vaccum assisted resine imfusion moulding</span>
-      <span class="parag points"><i class="fas fa-chevron-right"></i>Resin transfer moulding</span>
-      <span class="parag points"><i class="fas fa-chevron-right"></i>Proprag and autoclare</span>
+      <span class="subtitle">Our manufacturing capabilities</span>  
+      <div id="marketcont" class="marketcont">
+        <div class="card">
+          <img src="images/mc-pm.jpg" class="image1">
+          <div class="centered-title">
+            <span>Pattern making</span>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/mc-mm.jpg" class="image1">
+          <div class="centered-title">
+            <span>Mould making</span>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/mc-hl.jpg" class="image1">
+          <div class="centered-title">
+            <span>Hand layup</span>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/mc-vri.jpg" class="image1">
+          <div class="centered-title">
+            <span>Vacuum resin infusion</span>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/mc-rtm.jpg" class="image1">
+          <div class="centered-title">
+            <span>Resin transfer moulding</span>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/mc-paa.jpg" class="image1">
+          <div class="centered-title">
+            <span>Prepreg and autoclave</span>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="headingflow">
       <span class="subtitle">Weaving</span>
