--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <span class="title">Our Expertise</span>
     <span class="linestart"></span>
     <span class="lineend"></span>
-    <span class="parag">Every challenge requires a unique solutions and ideas to solve. Based on our expertise, we provide bespoke solutions that are as diverse as the needs of our customers. Here, We understand the critical aspects of customer’s requirement and validate the design & process using material science to provide the standard solution.</span>
+    <span class="parag">Every challenge requires a unique solution and idea to solve. Based on our expertise, we provide bespoke solutions that are as diverse as the needs of our customers. Here, We understand the critical aspects of our customer’s requirement and validate the design & process using material science to provide the best solution.</span>
   </div>
   <div class="ourbusiness">
     <div class="row">
@@ -152,29 +152,29 @@
     <div class="card">
       <img src="images/market-1.jpg" class="image1">
       <div class="centeredtitle">
-        <span>Aerospace and defense</span>
-        <p>We manufacture high performance composite designed to meet the stringuent performance and safety requirements of aerospace markets.</p>
+        <span>Aerospace and Defense</span>
+        <p>We manufacture high performance composites designed to meet the stringent performance and safety requirements of aerospace markets.</p>
       </div>
     </div>
     <div class="card">
       <img src="images/market-2.jpg" class="image1">
       <div class="centeredtitle">
-        <span>Industrial composites</span>
-        <p>Industrial composites are used in wind marine construction and transportation and other equipments marine corrosion resistance is required.</p>
+        <span>Industrial Composites</span>
+        <p>Industrial composites are used in wind, marine, construction and transportation and other equipments where corrosion resistance is required.</p>
       </div>
     </div>
     <div class="card">
       <img src="images/market-3.jpg" class="image1">
       <div class="centeredtitle">
-        <span>Sports equipment</span>
-        <p>Composite materials are light weight, provide high strength freedom of design easy processing and forming characteristics and they have obtained the widespread application in the manufacture of sports equipments.</p>
+        <span>Sports Equipment</span>
+        <p>Composite materials are light weight, provide high strength freedom of design, easy processing and forming characteristics. Hence, they have obtained the widespread application in the manufacture of sports equipments.</p>
       </div>
     </div>
     <div class="card">
       <img src="images/market-4.jpg" class="image1">
       <div class="centeredtitle">
-        <span>Automotive components</span>
-        <p>Industrial composite materials helps in reducing weight and co2 emissions of existing internal combustion based motor vehicles and optimizing the efficiency of the next generation electric vehicles.</p>
+        <span>Automotive Components</span>
+        <p>Industrial composite materials helps in reducing weight and CO<sub>2</sub> emissions of existing internal combustion based motor vehicles and optimizing the efficiency of the next generation electric vehicles.</p>
       </div>
     </div>
   </div>
