--- a/processcapabilities.html
+++ b/processcapabilities.html
@@ -94,16 +94,18 @@
     <span class="title">Manufacturing</span>
     <span class="linestart"></span>
     <span class="lineend"></span>
+  </div>
+  <div class="processcont2">
     <span class="subtitle">Advanced Composite</span>
     <div class="flowchart">
       <div class="left-image">
         <img src="images/pc-dad.jpg" class="image1">
         <div class="centeredtitle">
-          <span class="sub-title">Design and development</span>
+          <span class="sub-title">Design and Development</span>
         </div>
       </div>
       <div class="right-text">
-        <span>Aviscraft with its expertin in design and development has provided long term solutions with optimized design and make them familiar with key benefits of using composite as a replacements of other materials.</span>
+        <span>With our expertise in design and development, we have provided long term solutions with optimized design and have helped customers to understand the key benefits of using composites as a replacements of conventional materials.</span>
       </div>
     </div>
 
@@ -111,11 +113,11 @@
       <div class="left-image">
         <img src="images/pc-df.jpg" class="image1">
         <div class="centeredtitle">
-          <span class="sub-title">Design feasitivity</span>
+          <span class="sub-title">Design Feasibivity</span>
         </div>
       </div>
       <div class="right-text">
-        <span>Our simulated results are thoroughly studied and accessed with experimental and theoretical date using advanced softwares to study the feasitility of the design developed.</span>
+        <span>Our simulated results are thoroughly studied and Assessed with experimental and theoretical data using advanced softwares to study the feasibility of the design developed.</span>
       </div>
     </div>
 
@@ -123,11 +125,11 @@
       <div class="left-image">
         <img src="images/pc-tam.jpg" class="image1">
         <div class="centeredtitle">
-          <span class="sub-title">Tooling and machining</span>
+          <span class="sub-title">Tooling and Machining</span>
         </div>
       </div>
       <div class="right-text">
-        <span>With strong technical background our engineers offer advice on the tools and machining processes required to manufacture the prototype with exact dimensions and tolerances.</span>
+        <span>With a strong technical background, our engineers offer advice on the tools and machining processes required to manufacture the prototype with exact dimensions and tolerances.</span>
       </div>
     </div>
 
@@ -135,11 +137,11 @@
       <div class="left-image">
         <img src="images/pc-pd.jpg" class="image1">
         <div class="centeredtitle">
-          <span class="sub-title">Prototype development</span>
+          <span class="sub-title">Prototype Development</span>
         </div>
       </div>
       <div class="right-text">
-        <span>Our composite workshop in equipped to provide our stop solution from parts manufacturing to assembly of compsite structures under our roof. High proficient and experienced human resource in composite manufacturing adds and the core strength of our organization.</span>
+        <span>Our composite workshop is equipped to provide one stop solution from parts manufacturing to assembly of composite structures under one roof. High proficient and experienced human resource is the core strength of our organization.</span>
       </div>
     </div>
 
@@ -151,11 +153,11 @@
         </div>
       </div>
       <div class="right-text">
-        <span>The facility is comprehensially equipped and carry out mechanical and testing of materials, dimensional inspection, non-destructive testing composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, scheme stress and toughness.</span>
+        <span>The facility is comprehensively equipped to carry out mechanical testing of materials, dimensional inspection and non-destructive testing. Composite testing are very vital through out the product life cycle. We test for properties such as tensile strength, flexural strength, tensile stress,  compressive stress, shear stress and toughness.</span>
       </div>
     </div>
     <div class="headingflow">
-      <span class="subtitle">Our manufacturing capabilities</span>  
+      <span class="subtitle">Our Manufacturing Capabilities</span>  
       <div id="marketcont" class="marketcont">
         <div class="card">
           <img src="images/mc-pm.jpg" class="image1">
@@ -178,7 +180,7 @@
         <div class="card">
           <img src="images/mc-vri.jpg" class="image1">
           <div class="centered-title">
-            <span>Vacuum resin infusion</span>
+            <span>Vacuum assisted resin infusion</span>
           </div>
         </div>
         <div class="card">
@@ -190,18 +192,18 @@
         <div class="card">
           <img src="images/mc-paa.jpg" class="image1">
           <div class="centered-title">
-            <span>Prepreg and autoclave</span>
+            <span>Prepreg and Autoclave</span>
           </div>
         </div>
       </div>
     </div>
     <div class="headingflow">
       <span class="subtitle">Weaving</span>
-      <span class="parag">Aviscraft advanced materials offen wide range of woves fabric for various outdoor/indoor applications we produce fabrics with the latest technology by offering our customer consistent quality and immatched programmes.</span>
+      <span class="parag">Aviscraft advanced materials offers wide range of woven fabrics for various outdoor/indoor applications. We produce fabrics with the latest technology by offering our customer consistent quality and unmatched performances.</span>
     </div>
     <div class="headingflow">
       <span class="subtitle">Spinning</span>
-      <span class="parag">With decades of experience in spinning industry. We have enormous knowledge on processing of advanced fibres in our facility. Ring spun yarns are made from speciality fibres are processed with host technologists and man power.</span>
+      <span class="parag">With decades of experience in spinning industry, we have enormous knowledge on processing of advanced fibres in our facility. Ring spun yarns made from speciality fibres are processed with best technologists and manpower.</span>
     </div>
   </div>
   <div class="quickfooter">
