--- a/products.html
+++ b/products.html
@@ -148,7 +148,7 @@
         <span>Coated and laminated fabrics</span>
       </div>
       <div class="productcontent">
-        <p>Coated and laminated fabricsCoated and laminated fabrics are typically woven, knitted or non-woven textile fabrics which are combined with a thin, flexible film of a natural or synthetic polymeric substance to achieve desired property.</p>
+        <p>Coated and laminated fabrics are typically woven, knitted or non-woven textile fabrics which are combined with a thin, flexible film of a natural or synthetic polymeric substance to achieve desired property.</p>
       </div>
       <div class="rmcont">
         <a href="clfproduct.html"><i class="fas fa-arrow-right"></i></a>
