--- a/index.html
+++ b/index.html
@@ -160,21 +160,21 @@
       <img src="images/market-2.jpg" class="image1">
       <div class="centeredtitle">
         <span>Industrial Composites</span>
-        <p>Industrial composites are used in wind, marine, construction and transportation and other equipments where corrosion resistance is required.</p>
+        <p>Industrial composites are used in wind, marine, construction and transportation equipments where corrosion resistance is required.</p>
       </div>
     </div>
     <div class="card">
       <img src="images/market-3.jpg" class="image1">
       <div class="centeredtitle">
         <span>Sports Equipment</span>
-        <p>Composite materials are light weight, provide high strength freedom of design, easy processing and forming characteristics. Hence, they have obtained the widespread application in the manufacture of sports equipments.</p>
+        <p>Composite materials are light weight, provide high strength, freedom of design, easy processing and forming characteristics. Hence, they have obtained the widespread application in the manufacture of sports equipments.</p>
       </div>
     </div>
     <div class="card">
       <img src="images/market-4.jpg" class="image1">
       <div class="centeredtitle">
         <span>Automotive Components</span>
-        <p>Industrial composite materials helps in reducing weight and CO<sub>2</sub> emissions of existing internal combustion based motor vehicles and optimizing the efficiency of the next generation electric vehicles.</p>
+        <p>Composite materials helps in reducing weight and CO<sub>2</sub> emissions of existing internal combustion based motor vehicles and optimizing the efficiency of the next generation electric vehicles.</p>
       </div>
     </div>
   </div>
