--- a/processcapabilities.html
+++ b/processcapabilities.html
@@ -113,11 +113,11 @@
       <div class="left-image">
         <img src="images/pc-df.jpg" class="image1">
         <div class="centeredtitle">
-          <span class="sub-title">Design Feasibivity</span>
+          <span class="sub-title">Design Feasibility</span>
         </div>
       </div>
       <div class="right-text">
-        <span>Our simulated results are thoroughly studied and Assessed with experimental and theoretical data using advanced softwares to study the feasibility of the design developed.</span>
+        <span>Our simulated results are thoroughly studied and assessed with experimental and theoretical data using advanced softwares to study the feasibility of the design developed.</span>
       </div>
     </div>
 
