--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </div>
   <div class="homecontainer">
     <div class="parag">
-      <span class="title">Integrating advanced material science for a sustainable world</span>
+      <span class="title">Integrating Advanced Material Science For A Sustainable World</span>
       <span>With decades of experience in textile industry, We strongly believe that textile is a versatile sector which is much more than just apparels. Aviscraft Advanced Materials is our endeavour to branch into the area of material science to attain growth and development with textile as foundation. Our primary focus is on new fibres and innovative technologies that reduce environmental impact, enhance product outcomes and equip Aviscraft Advanced Materials with a market advantage. We manufacture advanced composites with Carbon fibre, Glass, Aramid and other natural fibres for defence, aerospace, medical and automotive markets.</span>
     </div>
     <div class="image">
